# otus_homeworks_zelentsov

./: README.md
.github/workflows/: run_tests.yml
homework_01/: README.md  main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  app.py  pyproject.toml  view.py
homework_05/: app.py  requirements.txt
homework_05/templates/: about.html  base.html  index.html
testing/test_homework_01/: test_main.py
