[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = "virtual environment for 3 homework"
authors = ["zelen <zelentsov1254@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
